--- a/src/styles.scss
+++ b/src/styles.scss
@@ -56,10 +56,6 @@
 }
 
 // Helpers
-.g-align-self-center {
-  align-self: center;
-}
-
 .g-section-separator {
   border-bottom: solid 1px rgba(gc.$blue-700, 0.3);
   padding-bottom: 16px;
